16 February 2007 by ieatacid, dkaa
- Updated for The Buried Sea expansion.  New "Power Source" item slot means slot changes:
 * Slots charm through waist are the same (0-20), "Power Source" is 21, 22 is ammo, 23 - 30 are inventory (bag) slots

17 January 2007 by ieatacid
- Updated for today's patch

14 January 2007 by rswiders
- Fix for zone translocate spell information crash displaying items
- Changes to spell stacking (spells will say they stack with themselves)

12 January 2007 by ieatacid
- Fix for Me.Aura for Monk auras (spelling error on SoE's part :o)
- dkaa told me about an AuraMgr struct and how it relates to AuraInfo -.-
- Added charinfo svChromatic, svPrismatic (Charisa)

2 January 2007 by rswiders
- Fix for npcs and objects

30 December 2006 by ieatacid
- Added DynamicZone TLO which has the following members
.. string Name
.. int Members
.. int MaxMembers
.. dzmember Member (number or string as a parameter)
.. dzmember Leader
.. to string - same as Name
- Added dzmember type, with members:
.. string Name
.. string Status - returns: Unknown, Online, Offline, In Dynamic Zone (no idea what this
   is, it's in the exe), Link Dead
.. to string - same as Name

23 December 2006 by rswiders
- Updates for GetSpellEffectName, ShowSpellSlotInfo (differentiation, pinkfloydx33)
- Updates for Counters in datatypes (pinkfloydx33)

14 December 2006 by ieatacid
- Updated for today's patch

7 December 2006 by dkaa
- Fix for NoDrop & NoRent

6 December 2006 by ieatacid, dkaa
- Fixed for Dec 5th patch

7 November 2006 by ieatacid
- MQ2ChatWnd should now remain visible while in hover state

31 October 2006 by ieatacid
- Fix for Halloween crash

25 October 2006 by ieatacid, rswiders
- Updated for today's patch

23 October 2006 by ieatacid
- Added Spell.MyRange.  This is YOUR actual cast range, including extended range from focus effects.

10 October 2006 by ieatacid
- Added "HOVER" for use with Me.State
- Added bool InHoverState() to MQ2Utilities.cpp
